--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -34,8 +34,8 @@
 
         /* Shared styles for images and videos */
         img, video {
-            width: 400px;
-            height: 300px;
+            width: 500px;
+            height: 500px;
             object-fit: cover;
             border: 2px solid #ddd;
             border-radius: 8px;
@@ -83,14 +83,14 @@
 
         <div class="image-container">
             <figure>
-                <video src="output.gif" autoplay loop muted></video>
+                <video src="output.gif" autoplay loop muted playsinline></video>
                 <figcaption>Description for output.gif.</figcaption>
             </figure>
         </div>
 
         <div class="image-container">
             <figure>
-                <video src="flower_output.gif" autoplay loop muted></video>
+                <video src="flower_output.gif" autoplay loop muted playsinline></video>
                 <figcaption>Description for flower_output.gif.</figcaption>
             </figure>
         </div>
@@ -100,14 +100,14 @@
 
         <div class="image-container">
             <figure>
-                <video src="aperture_output.gif" autoplay loop muted></video>
+                <video src="aperture_output.gif" autoplay loop muted playsinline></video>
                 <figcaption>Description for aperture_output.gif.</figcaption>
             </figure>
         </div>
 
         <div class="image-container">
             <figure>
-                <video src="flower_aperture_output.gif" autoplay loop muted></video>
+                <video src="flower_aperture_output.gif" autoplay loop muted playsinline></video>
                 <figcaption>Description for flower_aperture_output.gif.</figcaption>
             </figure>
         </div>
