--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -83,14 +83,14 @@
 
         <div class="image-container">
             <figure>
-                <video src="output.gif" autoplay loop muted playsinline></video>
+                <img src="output.gif"></img>
                 <figcaption>Description for output.gif.</figcaption>
             </figure>
         </div>
 
         <div class="image-container">
             <figure>
-                <video src="flower_output.gif" autoplay loop muted playsinline></video>
+                <img src="flower_output.gif"></img>
                 <figcaption>Description for flower_output.gif.</figcaption>
             </figure>
         </div>
@@ -100,14 +100,14 @@
 
         <div class="image-container">
             <figure>
-                <video src="aperture_output.gif" autoplay loop muted playsinline></video>
+                <img src="aperture_output.gif"></img>
                 <figcaption>Description for aperture_output.gif.</figcaption>
             </figure>
         </div>
 
         <div class="image-container">
             <figure>
-                <video src="flower_aperture_output.gif" autoplay loop muted playsinline></video>
+                <img src="flower_aperture_output.gif"></img>
                 <figcaption>Description for flower_aperture_output.gif.</figcaption>
             </figure>
         </div>
