--- a/final_proj/index.html
+++ b/final_proj/index.html
@@ -43,6 +43,12 @@
             margin: 0 auto; 
         }
 
+        /* New class for smaller images */
+        .small-image {
+            max-width: 300px; /* Adjust this value as needed */
+            height: auto;
+        }
+
         figcaption {
             font-size: 0.9em;
             color: #555;
@@ -114,7 +120,7 @@
 
         <div class="image-container">
             <figure>
-                <img src="toy_constr.png" alt="Toy Problem Construction">
+                <img src="toy_constr.png" alt="Toy Problem Construction" class="small-image">
                 <figcaption>Description for toy_constr.png.</figcaption>
             </figure>
         </div>
@@ -127,55 +133,3 @@
                 <img src="original_image.png" alt="Original Image">
                 <figcaption>Original Image</figcaption>
             </figure>
-            <figure>
-                <img src="original_penguin.png" alt="Original Penguin">
-                <figcaption>Original Penguin</figcaption>
-            </figure>
-            <figure>
-                <img src="original_blended.png" alt="Original Blended">
-                <figcaption>Original Blended</figcaption>
-            </figure>
-        </div>
-
-        <div class="image-container">
-            <figure>
-                <img src="poisson_blended.png" alt="Poisson Blended Output">
-                <figcaption>Description for poisson_blended.png.</figcaption>
-            </figure>
-        </div>
-
-        <div class="image-container">
-            <figure>
-                <img src="second_penguin_poisson.png" alt="Second Penguin Poisson">
-                <figcaption>Description for second_penguin_poisson.png.</figcaption>
-            </figure>
-        </div>
-
-        <div class="image-container">
-            <figure>
-                <img src="third_penguin_poisson.png" alt="Third Penguin Poisson">
-                <figcaption>Description for third_penguin_poisson.png.</figcaption>
-            </figure>
-        </div>
-
-        <h3>Bells &amp; Whistles: Mixed Gradients</h3>
-        <p>[Placeholder text for Bells &amp; Whistles: Mixed Gradients]</p>
-
-        <div class="image-row">
-            <figure>
-                <img src="cal_poisson.png" alt="Cal Poisson">
-                <img src="cal_mixed.png" alt="Cal Mixed">
-                <figcaption>Comparison of Poisson and Mixed Gradients for Cal.</figcaption>
-            </figure>
-        </div>
-
-        <div class="image-row">
-            <figure>
-                <img src="maru_mixed.png" alt="Maru Mixed">
-                <img src="maru_poisson.png" alt="Maru Poisson">
-                <figcaption>Comparison of Poisson and Mixed Gradients for Maru.</figcaption>
-            </figure>
-        </div>
-
-</body>
-</html>
